# nano-banana-studio

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  cli.py  config.json.example  generate.yaml.example  gui.py  nano-banana-studio.service.example  pyproject.toml
api/: client.py  models.py
core/: generator.py  notifications.py  runner.py  settings.py
gui/: main_window.py  workers.py
gui/components/: controls_panel.py  preview_panel.py
templates/: email_failure.html  email_success.html
tools/: test_email.py
